# clio-core

context-exploration-engine/agent-interceptor/: CMakeLists.txt  DEPLOYMENT.md  Prompt.md  README.md
context-exploration-engine/agent-interceptor/ctx_untangler/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/agent-interceptor/ctx_untangler/src/: ctx_untangler_client.cc  ctx_untangler_runtime.cc
context-exploration-engine/agent-interceptor/ctx_untangler/src/autogen/: dt_ctx_untangler_lib_exec.cc
context-exploration-engine/agent-interceptor/ctx_untangler/test/: CMakeLists.txt
context-exploration-engine/agent-interceptor/demo/: CMakeLists.txt  dt_demo_server.cc  dt_provenance_server.yaml  semantic_checks.yaml  wrp_conf.yaml
context-exploration-engine/agent-interceptor/deploy/: integration_test.py  integration_test.sbatch  run_agents.py  run_dashboard.sh  setup.sbatch  simple_claude_agent_sdk_test.py  test_5d5e.sh  test_chimaera_client.sh  test_clean_init.sh  test_cross_proc.sh  test_curl.sh  test_deployment.sbatch  test_diag.sh  test_diag_coawait.sh  test_e2e.sh  test_flask_bridge.sh  test_forward.sh  test_full_log.sh  test_init_debug.sh  test_ipc_mode.sh  test_monitor_events.sh  test_pyzmq_to_chimaera.sh  test_raw_dealer.sh  test_recovery_workflow.sh  test_selftest.sh  test_strace_init.sh  test_tcp_conn.sh  test_tcp_trace.sh  test_two_queries.py  test_two_queries.sbatch  test_zmq_cross_proc.sh  test_zmq_raw.sh  verify_storage.py
context-exploration-engine/agent-interceptor/interception/anthropic/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/agent-interceptor/interception/anthropic/src/: anthropic_client.cc  anthropic_runtime.cc
context-exploration-engine/agent-interceptor/interception/anthropic/test/: CMakeLists.txt  test_anthropic_forwarding.cc  test_anthropic_parsing.cc
context-exploration-engine/agent-interceptor/interception/ollama/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/agent-interceptor/interception/ollama/src/: ollama_client.cc  ollama_runtime.cc
context-exploration-engine/agent-interceptor/interception/ollama/test/: CMakeLists.txt  test_ollama_forwarding.cc  test_ollama_parsing.cc
context-exploration-engine/agent-interceptor/interception/openai/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/agent-interceptor/interception/openai/src/: openai_client.cc  openai_runtime.cc
context-exploration-engine/agent-interceptor/interception/openai/test/: CMakeLists.txt  test_openai_forwarding.cc  test_openai_parsing.cc
context-exploration-engine/agent-interceptor/protocol/: CMakeLists.txt
context-exploration-engine/agent-interceptor/protocol/src/: anthropic_parser.cc  cost_estimator.cc  interaction.cc  ollama_parser.cc  openai_parser.cc  provider.cc  session.cc  stream_buffer.cc  stream_reassembly.cc
context-exploration-engine/agent-interceptor/protocol/test/: CMakeLists.txt  test_anthropic_parser.cc  test_interaction_record.cc  test_openai_parser.cc  test_provider_detection.cc  test_session_extraction.cc  test_stream_reassembly.cc
context-exploration-engine/agent-interceptor/proxy/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/agent-interceptor/proxy/src/: http_proxy_server.cc  proxy_client.cc  proxy_runtime.cc  session_guard.cc
context-exploration-engine/agent-interceptor/proxy/test/: CMakeLists.txt  test_http_proxy.cc  test_session_guard.cc
context-exploration-engine/agent-interceptor/tools/: CMakeLists.txt  ctx_writer.cc
context-exploration-engine/agent-interceptor/tracker/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/agent-interceptor/tracker/src/: conversation_threading.cc  failure_detector.cc  tracker_client.cc  tracker_runtime.cc
context-exploration-engine/agent-interceptor/tracker/test/: CMakeLists.txt  test_conversation_threading.cc
context-exploration-engine/mcp-api/: CMakeLists.txt
context-exploration-engine/mcp-api/bindings/: CMakeLists.txt  python_bindings.cc
context-exploration-engine/mcp-api/client/: CMakeLists.txt
context-exploration-engine/mcp-api/client/src/: mcp_client.cc  mcp_transport.cc  native_client.cc
context-exploration-engine/mcp-api/demo/: CMakeLists.txt  demo_client.cc  demo_server.cc  wrp_conf.yaml
context-exploration-engine/mcp-api/gateway/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/mcp-api/gateway/src/: gateway_client.cc  gateway_runtime.cc  http_server.cc  mchip_router.cc  session_manager.cc  sse_writer.cc
context-exploration-engine/mcp-api/gateway/test/: CMakeLists.txt  test_gateway_chimod.cc  test_mchip_router.cc  test_session_manager.cc
context-exploration-engine/mcp-api/mchips/cae/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/mcp-api/mchips/cluster/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/mcp-api/mchips/cte/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/mcp-api/mchips/demo/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/mcp-api/protocol/: CMakeLists.txt
context-exploration-engine/mcp-api/protocol/src/: json_rpc.cc  mcp_error.cc  mcp_types.cc  schema_generator.cc
context-exploration-engine/mcp-api/sdk/: CMakeLists.txt
context-exploration-engine/mcp-api/sdk/src/: mchip_base.cc  mchip_client.cc  mchip_tasks.cc
context-exploration-engine/mcp-api/sdk/test/: CMakeLists.txt  test_tool_registrar.cc
context-exploration-engine/mcp-api/server/: CMakeLists.txt  chimaera_mod.yaml
context-exploration-engine/mcp-api/server/src/: http_server.cc  mcp_client.cc  mcp_runtime.cc  session_manager.cc  tool_registry.cc
context-exploration-engine/mcp-api/tests/: CMakeLists.txt  bench_native_vs_http.cc  bench_scalability.py  bench_server_cpp.cc  bench_server_python.py  test_native_client.cc
context-exploration-engine/mcp-api/tests/claude_sdk/: conftest.py  test_agentic_loop.py  test_cte_workflow.py  test_tool_discovery.py
context-exploration-engine/mcp-api/tools/: CMakeLists.txt
context-exploration-engine/mcp-api/tools/src/: cae_tools.cc  cluster_tools.cc  cte_tools.cc
(+144 files in other folders)
